# claude-skills

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  README.md  TEST_RESULTS.md  security_best_practices_report.md
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: block-dangerous-commands.sh  format-markdown.sh  guard-protected-files.sh  readme-sync-check.sh  validate-frontmatter.sh
agents/: code-reviewer.md  docs-writer.md  orchestrator.md  refactorer.md  test-architect.md
codex-advisor/: SKILL.md
commands/: install-conductor.md  pr-create.md  simplify.md
eval/breadcrumbs/: METHODOLOGY.md  README.md
gemini-image-generator/scripts/: generate_image.py
gemini-visual/: SKILL.md
gemini-visual/scripts/: analyze_ui.py  compare_designs.py  generate_ui_assets.py  screenshot_to_code.py
hooks/: README.md  pre_tool_use.py  session_start.py  stop.py  test_hooks.sh  user_prompt_submit.py
memory/: DAEMON.md  docker-compose.yml  pyproject.toml  test_daemon.py
memory/agent_memory/: __init__.py  audit_log.py  cli.py  config.py  daemon.py  daemon_client.py  formatting.py  hook_db.py  knowledge.py  llm_extractor.py  transcript.py
memory/launchd/: com.claude.memory-daemon.plist
memory/scripts/: ensure_db.sh  install_daemon.sh  test_hooks.md
opensea-api/: SKILL.md
opensea-api/scripts/: collection_stats.sh  fetch_nft.sh  monitor_collection.sh  wallet_nfts.sh
poplar-direct-mail/: SKILL.md
poplar-direct-mail/scripts/: send_batch.py  send_mailing.py  (+1 more)
scripts/: install_global_hooks.sh
skills/: evangelion-design.skill  markdown-fetch.skill
(+99 files in other folders)
